corrected otp form input ui on mobile

--- a/src/assets/scss/otp/otp.scss
+++ b/src/assets/scss/otp/otp.scss
@@ -7,6 +7,7 @@
         line-height: 142%;
         color: $black__theme_color;
     }
+
     .sub__text {
         // font-weight: 400;
         font-size: 1.125rem;
@@ -16,15 +17,16 @@
 
     .pincode-input-container {
         padding: 0.625rem 0;
-        margin: 1.25rem 0;
+        // margin: 1.25rem 0;
         white-space: nowrap;
-        text-align: center !important;
+        @include media("<=small-screen") {
+            text-align: center;
+        }
 
         .pincode-input-text {
             border-radius: 0.625rem;
             font-weight: 600;
             margin-left: 0;
-
             &:focus {
                 border: 1px solid $primary__theme_color !important;
             }
@@ -32,8 +34,8 @@
                 margin-right: 1rem !important;
             }
             @include media("<=small-screen") {
-                width: 2.5rem !important;
-                height: 2.5rem !important;
+                width: 40px !important;
+                height: 40px !important;
                 &:not(:last-child) {
                     margin-right: 10px !important;
                 }
